--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,11 @@
 [project]
 name = "repl-nix-workspace"
 version = "0.1.0"
-description = "Add your description here"
+description = "Perfect Intel Bot"
 requires-python = ">=3.11"
+
 dependencies = [
     "aiohttp>=3.13.2",
     "discord-py>=2.6.4",
+    "Flask>=3.0",
 ]
