--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,14 @@
-[project]
+[tool.poetry]
 name = "repl-nix-workspace"
 version = "0.1.0"
 description = "Perfect Intel Bot"
-requires-python = ">=3.11"
+authors = ["Your Name <you@example.com>"]
+packages = [{include = "my_bot"}]  # optional if you have subfolders
 
-dependencies = [
-    "aiohttp>=3.13.2",
-    "discord-py>=2.6.4",
-    "Flask>=2.3.3",
-]
+[tool.poetry.dependencies]
+python = "^3.11"
+aiohttp = "^3.13.2"
+discord.py = "^2.7.0"
+flask = "^2.3.3"
+
+[tool.poetry.dev-dependencies]
